Upgrade to JDK 17 (#13)
* Upgrade para JDK17

* Update all dependencies and adjusted to JDK 17

* Fix Linux executable

---------

Co-authored-by: Roberto Focosi <rfocosi.gmail.com>